/**
 * 작성자명 : tlaeowls
 * 작 성 일 : 2013.12.12
 */
package com.skplanet.storeplatform.sac.client.user.vo;

/**
 * java 파일로 생성시, 사용될 java의 패키지명
 */
option java_package = "com.skplanet.storeplatform.sac.client.user.vo";

/**
 * 실명 인증 정보
 */
message RealNameInfo {

	/**
	 * 실명인증 여부
	 */
	optional string isRealName = 1;

	/**
	 * 실명인증 대상
	 * > 본인
	 * > 부모동의
	 */
	optional string isOwn = 2;

	/**
	 * 법정대리인 관계코드
	 * > 아버지
	 * > 어머니
	 * > 기타
	 */
	optional string parentType = 3;

	/**
	 * 법정대리인 이메일
	 * > 아버지
	 * > 어머니
	 * > 기타
	 */
	optional string parentEmail = 4;

	/**
	 * 실명인증 일시
	 * > 아버지
	 * > 어머니
	 * > 기타
	 */
	optional string realNameDate = 5;

	/**
	 * CI
	 */
	optional string userCI = 6;

	/**
	 * DI
	 */
	optional string userDI = 7;

	/**
	 * 실명인증수단 코드
	 * > IPIN
	 * > KMC
	 */
	optional string realNameMethod = 8;

	/**
	 * 실명인증시스템 ID
	 * > IPIN
	 * > KMC
	 */
	optional string realNameSystemId = 9;

	/**
	 * 이동통신사
	 * >SKT
	 * >KT
	 * >U+
	 * >자급제단말
	 * >NSH
	 * >NON
	 * >iOS
	 */
	optional string userTelecom = 10;

	/**
	 * 휴대폰번호
	 */
	optional string userPhone = 11;

	/**
	 * 사용자 이름
	 */
	optional string userName = 12;

	/**
	 * 성별
	 */
	optional string userSex = 13;

	/**
	 * 생년월일
	 */
	optional string userBirthDay = 14;

}